--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calculadora de Idade</title>
 </head>
 <body>
-    <script src="aula01.js"></script>
+    <h1>Adivinha idade</h1>
+    <div id="resultado"></div>
+
+    <script src="aula01.js"></script> 
 </body>
 </html>
