--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora de Idade</title>
+    <title>O adivinha</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Adivinha idade</h1>
+    <h1>O adivinha online</h1>
     <div id="resultado"></div>
 
     <script src="aula01.js"></script> 
+
+    <button onclick="location.reload();">Refazer teste</button>
+
 </body>
 </html>
