--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O adivinha</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1>O adivinha online</h1>
-    <div id="resultado"></div>
-
-    <script src="aula01.js"></script> 
-
-    <button onclick="location.reload();">Refazer teste</button>
-
+    <script src="aula01.js"></script>
 </body>
 </html>
